--- a/libcamerahal/README
+++ b/libcamerahal/README
@@ -1,1 +1,3 @@
-This directory contains code for the ICS Camera HAL
+This directory contains code for the ICS Camera HAL.
+
+See https://github.com/rapmv78/android_hardware_qcom_camerahal
