--- a/SkateParts/res/values-it/strings.xml
+++ b/SkateParts/res/values-it/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="app_name">Impostazioni ZTE Skate</string>
+        <string name="app_name">SkateParts</string>
         <string name="prox_calibration_title_head">Calibrazione sensore di prossimità</string>
         <string name="prox_calibration_summary_head">Calibra il sensore di prossimità</string>
         <string name="prox_display_title_head">Dati sensore di prossimità</string>
