--- a/SkateParts/res/values-pt-rPT/strings.xml
+++ b/SkateParts/res/values-pt-rPT/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="app_name">Definições ZTE Skate</string>
+        <string name="app_name">SkateParts</string>
         <string name="prox_calibration_title_head">Calibrar sensor de proximidade</string>
         <string name="prox_calibration_summary_head">Calibração do sensor de proximidade</string>
         <string name="prox_display_title_head">Dados do sensor de proximidade</string>
