--- a/SkateParts/res/values/strings.xml
+++ b/SkateParts/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="app_name">ZTE Skate Settings</string>
+        <string name="app_name">SkateParts</string>
         <string name="prox_calibration_title_head">Calibrate proximity sensor</string>
         <string name="prox_calibration_summary_head">Do not put anything near the top of the screen while running</string>
         <string name="prox_display_title_head">Display proximity sensor data</string>
